@@ -1,3 +1,8 @@
+2005-08-29  Jürg Billeter  <j@bitron.ch>
+
+	* Makefile.am: dist intltool files
+	* configure.ac: Bump version to 0.0.3
+
 2005-08-28  Jürg Billeter  <j@bitron.ch>
 
 	* src/nautilus-image-resizer.c: fix glade file path
